# project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/binance/BTCUSDT/raw/: deltas_utcmin_29465341.jsonl  deltas_utcmin_29465342.jsonl.tmp
perp_market_microstructure_research.egg-info/: SOURCES.txt
scripts/: scratch_run.py
src/core/: fixed_point.py
src/core/schemas/: l2_delta.py
src/ingestion/adapters/binance/: record_binance_depth.py
src/ingestion/writers/: rotating_jsonl_writer.py
src/perp_market_microstructure_research.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/perp_market_microstructure_research/core/schemas/: l2_delta.py
src/perp_market_microstructure_research/ingestion/adapters/binance/: record_binance_depth.py
src/perp_market_microstructure_research/pipelines/: normalize_l2.py
src/pipelines/: normalize_l2.py
