[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perp-market-microstructure-research"
version = "0.1.0"
description = "Market microstructure research and ingestion system"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["perp_market_microstructure_research*"]
